--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -1,3 +1,214 @@
-.highlight {
-  color: #ff723a;
+body {
+  font-family: "Arial Rounded MT Bold";
+}
+
+.container {
+  display: grid;
+  grid-column-gap: 48px;
+  grid-template-columns: 60% 40%;
+  padding: 48px 24px;
+}
+
+.left {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: space-evenly;
+
+  .timer {
+    font-size: 3em;
+    color: #27af2c;
+    margin-bottom: 48px;
+  }
+
+  .board-container {
+    display: grid;
+    grid-column-gap: 12px;
+    grid-row-gap: 12px;
+    grid-template-columns: 25% 25% 25% 25%;
+    font-size: 4em;
+
+    > div {
+      display: flex;
+      justify-content: center;
+      text-align: center;
+      background-color: #e7e4e4;
+      border: 4px solid #ddd;
+      line-height: 64px;
+      margin: 2px;
+
+      &.highlight {
+        background-color: #ff7;
+        color: #000;
+      }
+    }
+  }
+}
+
+.right {
+  display: grid;
+  grid-row-gap: 48px;
+  grid-template-rows: 60% 40%;
+  padding: 48px 48px 0 0;
+}
+
+.result-list {
+  line-height: 24px;
+
+  .words {
+    overflow: auto;
+    max-height: 320px;
+    .word {
+      margin-bottom: 12px;
+      font-size: 1em;
+    }
+  }
+
+  legend {
+    font-size: 1.2em;
+    border-bottom: 4px solid #ddd;
+    margin-bottom: 12px;
+  }
+}
+
+form {
+  border-radius: 3px;
+  margin-bottom: 24px;
+  margin-right: 24px;
+
+  legend {
+    font-size: 1em;
+  }
+
+  input[type="text"] {
+    width: 100%;
+  }
+
+  button,
+  .btn {
+    border: 1px solid #4b7efe;
+    background: #4b7efe;
+    font-size: 1em;
+    font-weight: 500;
+    color: #ffffff;
+    padding: 12px 20px 10px;
+    border-radius: 3px;
+    cursor: pointer;
+    transition: all 0.1s ease-in-out;
+    line-height: 1;
+    margin-right: 12px;
+
+    &:hover {
+      background: #406de0;
+      border-color: #406de0;
+    }
+
+    &:focus {
+      outline: 0;
+      box-shadow: none;
+    }
+
+    &[disabled] {
+      opacity: 0.25;
+    }
+
+    &.processing {
+      background-color: #97a1b6;
+      border-color: #97a1b6;
+    }
+  }
+
+  .input-container {
+    margin-bottom: 12px;
+  }
+
+  input[type="text"] {
+    background: #ffffff;
+    border: 1px solid #4b7efe;
+    border-radius: 3px;
+    padding: 6px 10px 4px;
+    box-shadow: 0 0 2px 1px #ebeff7;
+    font-size: 1em;
+  }
+
+  .fieldset {
+    background: #ffffff;
+    padding: 12px 0;
+    border-radius: 3px;
+  }
+}
+
+form.field-error {
+  input[type="text"] {
+    border-color: #e25465;
+    box-shadow: 0 0 1px #e25465;
+  }
+  input[type="text"] {
+    &:focus {
+      outline-color: #e25465;
+    }
+  }
+}
+
+.field-msg-error {
+  color: #e25465;
+  font-size: 0.9em;
+
+  .error-title {
+    font-weight: 500;
+  }
+}
+
+.page-message {
+  position: fixed;
+  top: 14px;
+  left: 0;
+  right: 0;
+  -webkit-transform: translateY(-100%);
+  -moz-transform: translateY(-100%);
+  -ms-transform: translateY(-100%);
+  transform: translateY(-100%);
+  will-change: transform;
+  -webkit-transition: visibility 0.2s linear, transform 300ms linear 0.8s;
+  -moz-transition: visibility 0.2s linear, transform 300ms linear 0.8s;
+  -ms-transition: visibility 0.2s linear, transform 300ms linear 0.8s;
+  transition: visibility 0.2s linear, transform 300ms linear 0.8s;
+  visibility: hidden;
+
+  &.success {
+    -webkit-transform: translateY(0);
+    -moz-transform: translateY(0);
+    -ms-transform: translateY(0);
+    transform: translateY(0);
+    visibility: visible;
+  }
+
+  &.error {
+    -webkit-transform: translateY(0);
+    -moz-transform: translateY(0);
+    -ms-transform: translateY(0);
+    transform: translateY(0);
+    visibility: visible;
+  }
+}
+
+.message {
+  color: #ffffff;
+  font-size: 16px;
+  font-weight: 400;
+  max-width: 120px;
+  width: 100%;
+  margin: 0 auto;
+  position: relative;
+  padding: 16px 32px 16px 32px;
+  border-radius: 4px;
+  text-align: center;
+
+  &.success {
+    background: #37be21;
+  }
+
+  &.error {
+    background: #e53349;
+  }
 }
