--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -2,9 +2,13 @@ body {
   font-family: "Arial Rounded MT Bold";
 }
 
+
+*, ::after, ::before {
+  box-sizing: border-box;
+}
+
 .container {
   display: grid;
-  grid-column-gap: 48px;
   grid-template-columns: 60% 40%;
   padding: 48px 24px;
 }
@@ -13,7 +17,6 @@ body {
   display: flex;
   flex-direction: column;
   align-items: center;
-  justify-content: space-evenly;
 
   .timer {
     font-size: 3em;
@@ -47,9 +50,8 @@ body {
 
 .right {
   display: grid;
-  grid-row-gap: 48px;
-  grid-template-rows: 60% 40%;
-  padding: 48px 48px 0 0;
+  padding-left: 24px;
+  grid-template-rows: 70% 30%;
 }
 
 .result-list {
@@ -57,7 +59,8 @@ body {
 
   .words {
     overflow: auto;
-    max-height: 320px;
+    max-height: 240px;
+
     .word {
       margin-bottom: 12px;
       font-size: 1em;
@@ -152,11 +155,7 @@ form.field-error {
 
 .field-msg-error {
   color: #e25465;
-  font-size: 0.9em;
-
-  .error-title {
-    font-weight: 500;
-  }
+  font-size: 1em;
 }
 
 .page-message {
@@ -196,11 +195,11 @@ form.field-error {
   color: #ffffff;
   font-size: 16px;
   font-weight: 400;
-  max-width: 120px;
+  max-width: 128px;
   width: 100%;
   margin: 0 auto;
   position: relative;
-  padding: 16px 32px 16px 32px;
+  padding: 16px;
   border-radius: 4px;
   text-align: center;
 
